# Bellaventure

./: .gitignore  README.md
BellaVenture/: CMakeLists.txt
BellaVenture/code/: CMakeLists.txt
BellaVenture/code/bellaventure_lib/: CMakeLists.txt
BellaVenture/code/bellaventure_lib/include/: CharacterStats.h  Gift.h  Level.h  StrongString.h  StrongTypes.h
BellaVenture/code/bellaventure_lib/include/bellaventure/engine/: StrongString.h
BellaVenture/code/bellaventure_lib/src/: Gift.cpp  Level.cpp
BellaVenture/code/bellaventure_lib/src/models/: GlobalModel.cpp
BellaVenture/code/bellaventure_states/: CMakeLists.txt
BellaVenture/code/bellaventure_states/include/bellaventure/states/: CooldownState.h  CreationState.h  MasterMachine.h  MenuState.h  OptionsState.h  WarmupState.h
BellaVenture/code/bellaventure_states/src/states/: CooldownState.cpp  CreationState.cpp  MasterMachine.cpp  MenuState.cpp  OptionsState.cpp  PlayState.cpp  WarmupState.cpp
BellaVenture/code/bv_engine/: CMakeLists.txt
BellaVenture/code/bv_engine/include/bv/models/: GlobalModel.h
BellaVenture/code/bv_engine/src/: Gift.cpp  Level.cpp
BellaVenture/code/bv_engine/src/models/: GlobalModel.cpp
BellaVenture/code/bv_states/: CMakeLists.txt
BellaVenture/code/bv_states/include/bv/states/: CreationState.h  MasterMachine.h  MenuState.h  PlayState.h
BellaVenture/code/bv_states/src/states/: CooldownState.cpp  CreationState.cpp  MasterMachine.cpp  MenuState.cpp  OptionsState.cpp  PlayState.cpp  WarmupState.cpp
BellaVenture/code/bv_themes/: CMakeLists.txt  qmldir
BellaVenture/code/bv_themes/qml/: BVTheme.qml
BellaVenture/code/pc_app/: CMakeLists.txt
BellaVenture/code/pc_app/include/models/: GlobalModel.h  MenuPageModel.h
BellaVenture/code/pc_app/include/states/: CooldownState.h  CreationState.h  MasterMachine.h  MenuState.h  OptionsState.h  PlayState.h  WarmupState.h
BellaVenture/code/pc_app/qml/: BasePage.qml  CreationPage.qml  MenuPage.qml  Root.qml  main.qml
BellaVenture/code/pc_app/qml/models/: CharacteristicsListModel.qml  GiftsListModel.qml  SkillsListModel.qml
BellaVenture/code/pc_app/src/: main.cpp
BellaVenture/code/pc_app/src/models/: GlobalModel.cpp
BellaVenture/code/pc_app/src/states/: CooldownState.cpp  CreationState.cpp  MasterMachine.cpp  MenuState.cpp  OptionsState.cpp  PlayState.cpp  WarmupState.cpp
