set(MODULE_NAME "BVThemes")

project(${MODULE_NAME} VERSION 0.1 LANGUAGES CXX)

find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)

set(QT_QML_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_AUTOMOC ON)

file(GLOB_RECURSE CPP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE HPP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.h *hpp)
file(GLOB_RECURSE QML_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml)
file(GLOB_RECURSE PNG_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.png)


qt_add_library(${MODULE_NAME} STATIC
    ${CPP_SOURCES} ${HPP_SOURCES})

qt_add_qml_module(${MODULE_NAME}
    URI ${MODULE_NAME}
    VERSION 1.0
    QML_FILES
        ${QML_FILES}
    RESOURCES
        ${PNG_FILES}
    SOURCES 
        ${CPP_SOURCES} ${HPP_SOURCES}
    
)

target_include_directories (${MODULE_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(${MODULE_NAME}
PUBLIC
Qt6::Core
Qt6::Gui
Qt6::Quick
Qt6::Qml
)
